--- a/favorites.html
+++ b/favorites.html
@@ -57,7 +57,7 @@ background: linear-gradient(180deg, #c2e9fb 0%, #a1c4fd 50%, #fbc2eb 100%);
   padding: 1rem;
   margin-bottom: 1rem;
   cursor: pointer;
-  color: white;
+  color: black;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 		
